# infoboard-tauri

./: .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx  tauri-shim.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: app_log.rs  autostart.rs  geolocate.rs  http_proxy.rs  toast.rs  tray.rs  window.rs
src-tauri/src/plugins/bilibili_info/: mod.rs
src-tauri/src/plugins/mail/: mod.rs  types.rs
src-tauri/src/plugins/media_control/: mod.rs  types.rs
src-tauri/src/plugins/niutrans/: mod.rs  types.rs
src-tauri/src/plugins/ocr/: mod.rs
src-tauri/src/plugins/opencode/: cookie_tcp.rs  mod.rs  types.rs
src-tauri/src/plugins/screenshot/: mod.rs
src/components/: InfoSection.tsx  ScreenshotOverlayWindow.tsx  TitleBar.tsx  ToolExpandPanel.tsx  ToolSection.tsx
src/core/: GlobalToast.tsx  LogConsole.tsx  PluginHost.tsx  PluginRegistry.ts  appLog.ts  autostart-bridge.ts  clipboard-bridge.ts  eventBus.ts  http-client.ts  index.ts  plugin-host.tsx  tray-bridge.ts  types.ts
src/core/layout/: InfoSection.tsx  Sidebar.tsx  TitleBar.tsx  ToolExpandPanel.tsx  ToolSection.tsx
src/core/toast/: Toast.tsx
src/hooks/: useThemeColors.ts
src/plugins/: index.ts  registry.ts  types.ts
src/plugins/_template/: Component.tsx  index.ts  index.tsx  manifest.ts  useData.ts
src/plugins/bilibili-info/: bridge.ts
src/plugins/dynamic-island/: DynamicIsland.tsx  LyricsView.tsx  MediaControls.tsx  PillCollapsed.tsx  bridge.ts  index.ts  mail-bridge.ts  manifest.ts  types.ts  useMediaControl.ts  useMusicPlayerBridge.ts  (+1 more)
src/stores/: appStore.ts  themeColorStore.ts
src/styles/: globals.css
src/types/: electron.d.ts
src/utils/: themeColor.ts
(+47 files in other folders)
