[package]
name = "infoboard-tauri"
version = "0.1.0"
description = "InfoBoard - 桌面信息面板"
authors = ["InfoBoard"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "infoboard_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
dirs = "6"
tokio = { version = "1", features = ["full"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
md-5 = "0.10"
