[package]
name = "infoboard-tauri"
version = "0.1.0"
description = "InfoBoard - 桌面信息面板"
authors = ["InfoBoard"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "infoboard_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
dirs = "6"
tokio = { version = "1", features = ["full"] }

tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
md-5 = "0.10"

# Issue 14: 截图插件
image = "0.25"
arboard = "3"
base64 = "0.22"

# Issue 15: OCR 插件（使用子进程通信，无需额外 crate）

# Issue 16: IMAP 邮件插件
imap = "2.4"
imap-proto = "0.10"
native-tls = "0.2"
mail-parser = "0.10"
html-escape = "0.2"
log = "0.4"
chrono = "0.4"
